--- a/files/style.css
+++ b/files/style.css
@@ -73,7 +73,15 @@ h6 {
 }
 
 
+.logotypeGreen img {
+	height:50px; 
+	width:50px;
+}
 
+.logotypeBeige img {
+	height:50px; 
+	width:50px;
+}
 
 .navBarContainer {
 	
@@ -330,9 +338,11 @@ a.reserve{
 	color: var(--beigeFullColor);
 	border: 1px solid var(--beigeFullColor);
 }	
-	
+/* ---- end media screen smallest -----*/	
+
+
 }
-/* ---- end media screen smallest -----*/
+
 
 /* ---- END NAVIGATION BAR -----*/
 
@@ -376,69 +386,102 @@ a.reserve{
 		background-color: var(--greenTransparencyColor);
 		border: 3px solid var(--beigeQuarterColor);
 		border-radius: 5px;
-		
 }
 
 .listForReservingOptions{
 
 	max-width: 1000px;
 	margin:auto;
-background-color:white;
-	
-
-	
-}
-
-
-/*.reservingOptions > li {
-	background-color: yellow;
-	
-
+	border-radius:5px;
+	background-color:white;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+
+}
+
+ul.reservingOptions {	
 	height:95px;
-	max-width: 326px;
-}	*/
-
-
-
-ul.reservingOptions {
-	
-	height:95px;
-	
-	border-radius: 5px;
-
 	margin-bottom: 45px;
-	
 	list-style-type: none;
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
-		
+	align-items: center;	
 }
 
 
 
 a.resC{
-
-
-  color: green;
+  color: var(--blackFullColor);
   background-color: transparent;
   text-decoration: none;
-  /*margin: 0px 100px 0px 100px;*/
-  
+	padding:37px; 
+	background-color: red;
 }
 
-.special {
-	
+
+a.checkAvailability{
+	color: var(--lightColorFont);	
 	border-radius: 0px 5px 5px 0px;
-	
+	padding:37px; 
+	margin-right:10px;
+	background-color: var(--beigeFullColor);
+}
+
+a.dateArrival {
+	padding:37px;
+	border-radius: 5px 0px 0px 5px;
+}
+
+.reservingWindowTest{
+		
+		max-width: 1282px;
+		margin: auto;
+		margin-bottom:300px;
+		justify-content:   center;
+		list-style-type: none;
+		text-align:center;
+		background-color: var(--greenTransparencyColor);
+		border: 3px solid var(--beigeQuarterColor);
+		border-radius: 5px;
+		
+}
+
+.listForReservingOptionsTest {
+	max-width: 1000px;
+	margin:auto;
+	border-radius:5px;
+	background-color:white;
+
+	}
+
+.reservingOptionsTest { 
+	list-style-type: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+background-color:red;
+border-radius:5px;
 	padding:37px; 
 
-	background-color: var(--beigeFullColor);
-	
+	}
+
+
+a.resCT{
+  color: var(--blackFullColor);
+
+  text-decoration: none;
 }
+
+.checkAvailabilityTest{
+	color: var(--lightColorFont);	
+	border-radius: 0px 5px 5px 0px;
+	
+	
+	background-color: var(--beigeFullColor);
+}
+
+
 
 .sectionTwo {
 	
@@ -480,7 +523,7 @@ a.resC{
 	overflow: hidden;
 	margin:90px;
 	position: absolute;
-	top: 900px;
+	/*top: 900px; for test purposes of 2nd reserving window it is in halt*/
 	left: 900px;
 	clip: rect(0px, 750px, 800px, 180px);
 	border: 12px solid white;
@@ -498,9 +541,20 @@ clear: left;
 }
   
   
-  
-  
-  
+    
+  /* ---- content media screen smallest ----*/	
+@media screen and (max-width: 600px) {
+.special {
+	
+	border-radius: 0px 5px 5px 0px;
+	
+	padding:28px; 
+
+	background-color: var(--beigeFullColor);
+	
+}
+}
+
   
   
   
