--- a/files/style.css
+++ b/files/style.css
@@ -27,15 +27,15 @@ body {
 }
 
 h1 {
-	font-family: 'Playfair Display', serif;
+	font-family: 'Playfair Display',regular, serif;
 	color: var(--lightColorFont);
-	font-size: 55px;
+	font-size: 50px;
 }
 
 h2 {
 	font-family: 'Playfair Display', serif;
 	color: var(--darkColorFont);
-	font-size: 55px;
+	font-size: 50px;
 }
 h3 {
 }
@@ -55,6 +55,11 @@ h6 {
 	font-size: 14px;
 }
 
+h7{
+	font-family: 'Playfair Display', serif;
+	color: var(--darkColorFont);
+	font-size: 18px;
+}
 
 
 
@@ -406,10 +411,13 @@ li.resizeRes  {
 	background-color:white;
 	width:300px;
 	padding:37px;
+	margin-bottom:40px;
+
 }
 
 li.leftRR {
 	border-radius: 5px 0px 0px 5px;
+	border-right: 1px solid var(--beigeQuarterColor);
 }
 
 li.rightRR{
@@ -418,9 +426,19 @@ li.rightRR{
 	background-color: var(--beigeFullColor);
 }
 
-a.checkAvailability {
-		color: var(--lightColorFont);	
+a.resC {
+	display: flex;
+	justify-content: space-between;
+	text-decoration: none;
+	color: var{--blackFullColor};
+	
 }
+
+a.checkAvailability {
+		color: var(--lightColorFont);		
+}
+
+
 
 
 
@@ -443,7 +461,7 @@ a.checkAvailability {
 
 .sTText {
 	
-	max-width: 700px;
+	max-width: 630px;
 	margin:75px;
 	top: 400px;
 	margin: 100px;
@@ -457,6 +475,11 @@ a.checkAvailability {
 
 .sTText p {
 	margin-left:90px;
+
+}
+
+.sTImage {
+	overflow:hidden;
 
 }
 /*
@@ -489,11 +512,77 @@ a.checkAvailability {
 
 
 .sectionThree {
-clear: left;
-	display: flex;
+	
+	
+	
+	
+	
+}
+
+.apartmentFacts{
+		display: flex;
+	   justify-content: space-evenly; /*stuff responsible for flex box of this part*/
+	   list-style-type: none;
+		max-width:1400px;
+
 }
   
+
   
+ ul.apartmentFactsSquare {
+	 border: 1px solid var(--beigeQuarterColor);
+	 padding:15px;
+	 
+	 width:200px;/*i wonder...*/
+	 list-style-type: none;
+	 
+	 
+ 
+	  
+  text-decoration: none; 
+ }
+ 
+ .apartmentFactsSquare > li {
+/*text-align:center;*/
+
+ display: flex;
+ justify-content: space-evenly;
+ 
+ }
+ 
+ 
+
+ul.apartmentFactsSquare > li {
+	
+	
+}
+
+.apartmentFactsSquare {
+/*display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: stretch;
+*/	
+}
+
+
+.aFSCircle {
+	
+	width: 94px;
+	height:94px;
+	border-radius:90px;
+	margin:25%;
+	
+	background-color: var(--beigeFullColor);
+
+	
+	align-items:center;
+	
+	margin-bottom:45px;
+	
+	
+	
+ }
     
   /* ---- content media screen smallest ----*/	
 @media screen and (max-width: 600px) {
